Added Integration test with selenium

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,11 +32,11 @@
     <input type="number" id="inputB" placeholder="Enter second number" />
 
     <br/><br/>
-    <button onclick="calculate('add')">Add</button>
-    <button onclick="calculate('sub')">Subtract</button>
-    <button onclick="calculate('mul')">Multiply</button>
-    <button onclick="calculate('div')">Divide</button>
+    <button name="add" onclick="calculate('add')">Add</button>
+    <button name="sub" onclick="calculate('sub')">Subtract</button>
+    <button name="mul" onclick="calculate('mul')">Multiply</button>
+    <button name="div" onclick="calculate('div')">Divide</button>
 
-    <h2>Result: <span id="result"></span></h2>
+    <h2>Result: <span name="result" id="result"></span></h2>
 </body>
 </html>
